--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,36 @@
 <resources>
     <string name="app_name">01Tarea</string>
+    <string name="texto"><![CDATA[
+─────────────────────────────▄██▄
+─────────────────────────────▀███
+────────────────────────────────█
+───────────────▄▄▄▄▄────────────█
+──────────────▀▄────▀▄──────────█
+───────────▄▀▀▀▄─█▄▄▄▄█▄▄─▄▀▀▀▄──█
+──────────█──▄──█────────█───▄─█─█
+──────────▀▄───▄▀────────▀▄───▄▀─█
+───────────█▀▀▀────────────▀▀▀─█─█
+───────────█───────────────────█─█
+▄▀▄▄▀▄────█──▄█▀█▀█▀█▀█▀█▄────█─█
+█▒▒▒▒█────█──█████████████▄───█─█
+█▒▒▒▒█────█──██████████████▄──█─█
+█▒▒▒▒█────█───██████████████▄─█─█
+█▒▒▒▒█────█────██████████████─█─█
+█▒▒▒▒█────█───██████████████▀─█─█
+█▒▒▒▒█───██───██████████████──█─█
+▀████▀──██▀█──█████████████▀──█▄█
+──██───██──▀█──█▄█▄█▄█▄█▄█▀──▄█▀
+──██──██────▀█─────────────▄▀▓█
+──██─██──────▀█▀▄▄▄▄▄▄▄▄▄▀▀▓▓▓█
+──████────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──███─────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──██──────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──██──────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──██─────────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──██────────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█
+──██───────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌
+──██──────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌
+──██─────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌
+──██────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌
+    ]]></string>
 </resources>
